syntax = "proto3";

package wasm.rpc;

import "wasm/ast/type.proto";
import "wasm/rpc/val.proto";

message ValueAndType {
    wasm.rpc.Val value = 1;
    wasm.ast.Type typ = 2;
}
